--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>utils</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <parent>
+        <groupId>com.redapplenet.cloud</groupId>
+        <artifactId>redapple-spring-boot-starter</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
    <!-- <repositories>
         <repository>
             <id>io.spring.repo.maven.release</id>
